--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,11 @@ defaults:
       type: jobs
     values:
       layout: job
+  - scope:
+      type: document
+      path: "_data/vars.yml"
+      label: Vars
+      
 collections:
   jobs:
     output: true
