--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -7,6 +7,9 @@ sections:
 - type: jekyll-pages
   label: Pages
   create: all
+- type: document
+  path: _data/vars.yaml
+  label: Variables
 - type: directory
   path: _jobs
   label: Jobs
