--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -18,7 +18,7 @@ sections:
 - type: document
   label: Help
   path: README.md
-  read_only: true
+  read_only: false
 upload_dir: uploads
 public_path: "/uploads"
 front_matter_path: ''
