--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -7,13 +7,14 @@ sections:
 - type: jekyll-pages
   label: Pages
   create: all
+  exclude: README.md
 - type: directory
   path: _jobs
   label: Jobs
   create: all
   match: "**/*"
 - type: document
-  path: _data/vars.yaml
+  path: _data/vars.yml
   label: Variables
 - type: document
   label: Help
