--- a/_data/vars.yml
+++ b/_data/vars.yml
@@ -3,3 +3,8 @@ header: "Найду. Подберу. Предложу."
 subheader: "Интересные вакансии из мира Computer Graphics"
 nojobheader: "В данный момент все трудоустроены"
 nojobsubheader: "Возвращайтесь позже или бросьте мне письмо"
+links:
+  - name: "telegram"
+    url: "https://t.me/hokkusan"
+  - name: "youtube"
+    url: "https://youtube.com"
