--- a/_data/vars.yml
+++ b/_data/vars.yml
@@ -11,3 +11,5 @@ links:
   url: https://youtube.com
 showjobs: true
 shownavbar: false
+fonturl: "https://fonts.googleapis.com/css?family=Montserrat:400,700"
+fontname: "Montserrat"
